--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  mobx: any
+  flutter_mobx: any
+  mobx_codegen: any
+  shared_preferences: 0.5.7
+  http: ^0.12.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,6 +38,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
