--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,7 +27,7 @@ dependencies:
   mobx: any
   flutter_mobx: any
   mobx_codegen: any
-  shared_preferences: 0.5.7
+#  shared_preferences: 0.5.7
   http: ^0.12.0
 
 
