--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  freezed: any
+  flutter_bloc: ^7.1.0
+  get_it: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
