--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,32 +18,33 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.11.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   mobx: any
-  flutter_mobx: any
-  mobx_codegen: any
-#  shared_preferences: 0.5.7
-  http: ^0.12.0
+  flutter_mobx: ^2.0.2
+  mobx_codegen: ^2.0.3
+  shared_preferences: ^2.0.8
+  http: ^0.13.3
+  image_picker: ^0.8.4+2
+  json_serializable: ^5.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  freezed: any
+  freezed: ^0.14.5
   flutter_bloc: ^7.1.0
-  get_it: any
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.1.2
 
-  build_runner: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
