--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   freezed: ^0.14.5
   flutter_bloc: ^7.1.0
   get_it: ^7.2.0
+  dartz: ^0.10.0
 
 dev_dependencies:
   flutter_test:
