--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.13.3
   image_picker: ^0.8.4+2
   json_serializable: ^5.0.2
+  flutter_feather_icons: ^2.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
