--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_feather_icons: ^2.0.0+1
   curved_navigation_bar: ^1.0.1
   animations: ^2.0.1
+  cached_network_image: ^3.1.0
+  path_provider: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
